<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ MIT License
  ~
  ~ Copyright (c) 2020 VarTmp7
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/llTrackingItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="5dp"
    android:layout_marginBottom="5dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/tracking_item_title_background"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/llTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/civIconOrganizzazione"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:civ_border_width="2dp" />

            <TextView
                android:id="@+id/tvNomeOrganizzazione"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="14"
                android:paddingStart="5dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <ImageButton
                android:id="@+id/ibtnTrackingOn"
                android:minWidth="32dp"
                android:minHeight="32dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_tracking_off"
                android:background="@android:color/transparent"
                />

            <ImageButton
                android:id="@+id/ibtnAddToPreferiti"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="32dp"
                android:paddingEnd="5dp"
                android:minHeight="32dp"
                android:src="@drawable/icon_fav_no"
                android:background="@android:color/transparent" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/llHidingInformation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:layout_marginBottom="10dp"
            android:visibility="gone">

            <include layout="@layout/organization_details"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnStartTracking"
                    android:background="@drawable/refresh_btn_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_weight="2"
                    android:text="@string/track_me" />

                <Button
                    android:id="@+id/btnLoginLDAP"
                    android:background="@drawable/refresh_btn_style"
                    android:layout_width="wrap_content"
                    android:layout_weight="2"
                    android:textColor="@color/white"
                    android:layout_height="wrap_content"
                    android:text="@string/login_ldap" />

                <Switch
                    android:id="@+id/sAnonymousSwitch"
                    android:layout_width="0dp"
                    android:enabled="false"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="8"
                    android:text="@string/anonimo_question"
                    android:textSize="20sp" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>