...
    <string name="fb_login_protocol_scheme">fb212692166599390</string>
    <string name="continua_senza_autenticazione">Continua senza autenticazione</string>
    <string name="title_home">Home</string>
    <string name="cronologia">Cronologia</string>
    <string name="preferiti">Preferiti</string>
    <string name="organizzazioni">Organizzazioni</string>
    <string name="track_me">Tracciami</string>
    <string name="login_ldap">Login LDAP</string>
    <string name="anonimo_question">Anonimo</string>
    <string name="indirizzo">Indirizzo:</string>
    <string name="email">Email</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
...
