...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingEnd="10dp">

                <Button
                    android:id="@+id/btnTrackMe"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:background="@drawable/ic_add_circle_outline_black_24dp" />

                <Button
...
